--- a/config.yaml
+++ b/config.yaml
@@ -8,7 +8,7 @@ cameras:
   #     base_url: 'http://192.168.1.111'
 
 #   - cam2:
-#       type: "ptz_fixed"
+#       type: "ptz"
 #       task: "Anpr"
 #       source: 'rtsp://192.168.1.111'
 #       model_used: "ANPRModel"
@@ -21,12 +21,19 @@ cameras:
       source: 0
       model_used: "YOLOv11DetectionModel"
 
-  - cam4:
-      type: "video"
-      task: "Anpr"
-      source: 'output_video2.mp4'
-      model_used: "ANPRModel"
+#   - cam4:
+#       type: "video"
+#       task: "Anpr"
+#       source: 'output_video2.mp4'
+#       model_used: "ANPRModel"
 
+  - cam5:
+      type: "ptz_fixed"
+      task: "Anpr"
+      source: 'rtsp://192.168.1.112'
+      model_used: "ANPRModel"
+      url: 'ws://192.168.1.112/cgi-bin/event-websock/streaming.cgi'
+      base_url: 'http://192.168.1.112'
   # - cam5:
   #     type: "video"
   #     task: "Detection"
