--- a/.gitignore
+++ b/.gitignore
@@ -5,4 +5,11 @@ application.py
 test2.mp4
 testvideo3.mp4
 output_video2.mp4
+v1.mp4
+v2.mp4
+v3.mp4
+video1.mp4
+video2.mp4
+video3.mp4
+demovideo.mp4
 venv/
