new changes to adjust fps for video

--- a/config.yaml
+++ b/config.yaml
@@ -1,48 +1,25 @@
 cameras:
-#   - cam1:
-#       type: "ptz"
-#       task: "Anpr"
-#       source: 'rtsp://192.168.1.111'
-#       model_used: "ANPRModel"
-#       url: 'ws://192.168.1.111/cgi-bin/event-websock/streaming.cgi'
-#       base_url: 'http://192.168.1.111'
-
-  - cam2:
+  - cam1:
       type: "ptz_fixed"
       task: "Anpr"
-      source: 'rtsp://192.168.1.111'
+      source: "rtsp://192.168.1.111"
       model_used: "ANPRModel"
-      url: 'ws://192.168.1.111/cgi-bin/event-websock/streaming.cgi'
-      base_url: 'http://192.168.1.111'
+      url: "ws://192.168.1.111/cgi-bin/event-websock/streaming.cgi"
+      base_url: "http://192.168.1.111"
 
-  # - cam3:
-  #     type: "webcam"
-  #     task: "Anpr"
-  #     source: 0
-  #     model_used: "ANPRModel"
+  - cam2:
+      type: "video"
+      task: "Detection"
+      source: "/home/yash/Desktop/ANPR/demovideo.mp4"
+      model_used: "YOLOv11DetectionModel"
 
-  # - cam4:
-  #     type: "video"
-  #     task: "Anpr"
-  #     source: 'video1.mp4'
-  #     model_used: "ANPRModel"
-
-#   - cam5:
-#       type: "video"
-#       task: "Anpr"
-#       source: 'demovideo.mp4'
-#       model_used: "ANPRModel"
-
-
-  # # - cam5:
-  # #     type: "ptz_fixed"
-  # #     task: "Anpr"
-  # #     source: 'rtsp://192.168.1.112'
-  # #     model_used: "ANPRModel"
-  # #     url: 'ws://192.168.1.112/cgi-bin/event-websock/streaming.cgi'
-  # #     base_url: 'http://192.168.1.112'
-  
   - cam3:
+      type: "video"
+      task: "Anpr"
+      source: "/home/yash/Desktop/ANPR/demovideo.mp4"
+      model_used: "ANPRModel"
+
+  - cam4:
       type: "webcam"
       task: "Detection"
       source: 0
